Cake script is not necessarily located in the executing assembly

--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -126,8 +126,8 @@
   <data name="CouldNotGetListOfPullRequests" xml:space="preserve">
     <value>Could not get list of pull requests</value>
   </data>
-  <data name="CouldNotLoadLatestBuildCake" xml:space="preserve">
-    <value>Could not load latest {0} script</value>
+  <data name="CouldNotLoadEmbeddedBuildCake" xml:space="preserve">
+    <value>Could not load {0} script embedded in {1}</value>
   </data>
   <data name="CouldNotReadCakeVersion" xml:space="preserve">
     <value>Could not read cake version from {0}</value>
