Update pinned cake version to 0.32.1

--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="CommitNotFound" xml:space="preserve">
     <value>Commit '{0}' not found</value>
   </data>
+  <data name="CouldNotDownload" xml:space="preserve">
+    <value>Could not download "{0}"</value>
+  </data>
   <data name="CouldNotGetListOfPullRequests" xml:space="preserve">
     <value>Could not get list of pull requests</value>
   </data>
